# standalone-cli-for-side-by-side-diff-of-llm-prom

./: README.md  pyproject.toml
standalone_cli_for_side_by_side_diff_of_llm_prom/: __init__.py  core.py
tests/: test_core.py
