[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "prompt-diff"
version = "0.1.0"
license = "MIT"
description = "A lightweight, dependency-free CLI for side-by-side diffs of LLM prompt outputs."
requires-python = ">=3.10"

[project.scripts]
prompt-diff = "prompt_diff.cli:main"
llm-diff = "standalone_cli_for_side_by_side_diff_of_llm_prom.core:main"
